--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,11 +6,13 @@
     <uses-sdk android:minSdkVersion="16"/>
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
         <activity android:name="LoginActivity"
+
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".ContactListActivity" android:label=""/>
     </application>
 </manifest>
