--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,8 +3,10 @@
           package="com.example.ContactsTest"
           android:versionCode="1"
           android:versionName="1.0">
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-sdk android:minSdkVersion="16"/>
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+
         <activity android:name="LoginActivity"
 
                   android:label="@string/app_name">
