Work on contact detail activity

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,5 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ContactListActivity" android:label=""/>
+        <activity android:name=".ContactDetailActivity"
+                android:parentActivityName=".ContactListActivity"/>
     </application>
 </manifest>
