--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,8 +4,9 @@
           android:versionCode="1"
           android:versionName="1.0">
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-sdk android:minSdkVersion="16"/>
+    <uses-sdk android:minSdkVersion="16" android:targetSdkVersion="16"/>
     <application android:label="@string/app_name" android:icon="@drawable/logo"
+                 android:allowBackup="true"
                  android:theme="@android:style/Theme.Holo.Light">
         <activity android:name="LoginActivity"
                   android:label="@string/app_name">
