--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ContactListActivity" android:label=""/>
+        <activity android:name=".ContactListActivity" android:launchMode="singleTop" android:label=""/>
         <activity android:name=".ContactDetailActivity"
                 android:parentActivityName=".ContactListActivity"/>
     </application>
