--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.ContactsTest"
+          package="com.krld.ContactsTest"
           android:versionCode="1"
           android:versionName="1.0">
     <uses-permission android:name="android.permission.READ_CONTACTS" />
@@ -8,7 +8,7 @@
     <application android:label="@string/app_name" android:icon="@drawable/logo"
                  android:allowBackup="true"
                  android:theme="@android:style/Theme.Holo.Light">
-        <activity android:name="LoginActivity"
+        <activity android:name="com.krld.ContactsTest.LoginActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
