--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,20 +3,18 @@
           package="com.krld.ContactsTest"
           android:versionCode="1"
           android:versionName="1.0">
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="16"/>
-    <application android:label="@string/app_name" android:icon="@drawable/logo"
+    <application android:label="@string/app_name" android:icon="@drawable/logo_big"
                  android:allowBackup="true"
                  android:theme="@android:style/Theme.Holo.Light">
-        <activity android:name="com.krld.ContactsTest.LoginActivity"
-                  android:label="@string/app_name">
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity android:name=".ContactListActivity" android:launchMode="singleTop" android:label=""/>
-        <activity android:name=".ContactDetailActivity"
-                android:parentActivityName=".ContactListActivity"/>
+        <activity android:name=".ContactDetailActivity" android:parentActivityName=".ContactListActivity"/>
     </application>
 </manifest>
